--- a/canvas-demos/clockDemo.html
+++ b/canvas-demos/clockDemo.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="一个用canvas实现的时钟demo" />
     <title>clockByCanvas</title>
+    <style>
+        #tutorial {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
