--- a/clock-demos/clockDemo.html
+++ b/clock-demos/clockDemo.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="一个带翻牌效果的时钟demo" />
+    <meta name="description" content="一个带翻牌效果的时钟demo" />
     <title>clockDemo</title>
     <link rel="stylesheet" href="./clockDemo.css">
     </link>
